syntax = "proto3";

package project.planton.provider.kubernetes.workload.rediskubernetes.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/kubernetes/workload/rediskubernetes/v1/spec.proto";
import "project/planton/provider/kubernetes/workload/rediskubernetes/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

//redis-kubernetes
message RedisKubernetes {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'RedisKubernetes'];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  RedisKubernetesSpec spec = 4 [(buf.validate.field).required = true];

  //status
  RedisKubernetesStatus status = 5;
}

//redis-kubernetes status.
message RedisKubernetesStatus {
  //stack-outputs
  RedisKubernetesStackOutputs outputs = 1;
}
